[gd_scene load_steps=8 format=2]

[ext_resource path="res://tanks/Tank.gd" type="Script" id=1]
[ext_resource path="res://arts/kenney_topdowntanksredux/PNG/Retina/shotLarge.png" type="Texture" id=2]
[ext_resource path="res://arts/kenney_topdowntanksredux/PNG/Retina/shotOrange.png" type="Texture" id=3]
[ext_resource path="res://arts/kenney_topdowntanksredux/PNG/Retina/shotRed.png" type="Texture" id=4]
[ext_resource path="res://arts/kenney_topdowntanksredux/PNG/Retina/shotThin.png" type="Texture" id=5]
[ext_resource path="res://bullets/Explosion.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "fire",
"speed": 8.0
} ]

[node name="Tank" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "collision" ]
Bullet = null
max_speed = null
rotation_speed = null
gun_cooldown = null
max_health = null

[node name="Body" type="Sprite" parent="." index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

[node name="Turret" type="Sprite" parent="." index="2"]

[node name="Muzzle" type="Position2D" parent="Turret" index="0"]

_sections_unfolded = [ "Visibility" ]

[node name="BloomSprite" type="AnimatedSprite" parent="Turret/Muzzle" index="0"]

visible = false
frames = SubResource( 1 )
animation = "fire"
offset = Vector2( 0, 15 )

[node name="GunTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Explosion" parent="." index="4" instance=ExtResource( 6 )]

visible = false
animation = "fire"
playing = false

[connection signal="animation_finished" from="Turret/Muzzle/BloomSprite" to="." method="_on_BloomSprite_animation_finished"]

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]

[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]


